# metis

./: .dockerignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
src/: command_handler.rs  db.rs  handler.rs  main.rs  manager.rs  reminder.rs  reminder_menu.rs
src/commands/: command.rs  list.rs  menu.rs  mod.rs  remind.rs  remindin.rs  remindme.rs  tz.rs
