[package]
name = "metis"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.7"
cron = "0.9"
chrono = "0.4"
chrono-tz = { version = "0.6", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slotmap = { version = "1.0", features = ["serde"] }
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["fs", "macros", "sync", "rt-multi-thread"] }